# weazzy

app/: .env-template  README.md  docker-compose.yml  env-template  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2025_02_02_1042-fd2510c75e62_init_users_table.py
app/api/: schemas.py
app/api/crud/: user.py
app/app/core/: config.py
app/core/: config.py
app/core/db/: db_helper.py
app/core/db/models/: __init__.py  base_model.py  city.py  user.py
app/utils/: utils.py
