[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "nik443",email = "nikhram301@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
